# old-opengl-project-refactor

./: Assignment 3.sln  CMakeLists.txt  ORIGINAL_BEHAVIOR.md  README.md  README.txt
Assignment 3/: main.cpp  shader.h  texture.h
assets/shaders/: shadow_fragment.glsl  shadow_vertex.glsl  textured_fragment.glsl  textured_vertex.glsl
assets/textures/face_3/: source.txt
assets/textures/face_4/: source.txt
assets/textures/face_5/: source.txt
assets/textures/face_5_old/: source.txt
assets/textures/face_6/: source.txt
assets/textures/skybox/: source.txt
docs/: MAIN_CPP_ANALYSIS.md
includes/glad/: glad.c
opengl-cube/: asset_paths.h  camera.cpp  camera.h  main.cpp  shader.cpp  shader.h  texture.cpp  texture.h
